# GitHub-Tryouts-Python-Workflow

./: pyproject.toml  script.py
.github/workflows/: python-workflow.yml
