[project]
name = "github-tryouts-python-workflow"
version = "0.1.0"
description = ""
authors = [
    {name = "Jai",email = "gruprog@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "rich-argparse (>=1.7.1,<2.0.0)",
    "pip-system-certs (>=5.2,<6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
